--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,3 +1,10 @@
 ---
+permalink: /about/
 author_profile: false
+title: "About Me"
+header:
+  image: /assets/images/itMe.jpg
+  caption: "Photo credit: [**Marcel Goh**](https://marcelgoh.ca/)"
 ---
+<strong>Heyo! Nice to meet ya.</strong>
+My name's Amanda Gu.
