First post (formatting)

--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -1,6 +1,7 @@
 ---
 permalink: /biol490/
 title: "Using Compressive Sensing to Recover Lotka-Volterra Dynamics"
+type: posts
 categories:
   - Math
   - Ecology
