--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -9,8 +9,18 @@ categories:
 hidden: true
 excerpt_separator: "<!--more-->"
 ---
-<!--<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>-->
-<i>This is blog post is a summary of research that I did under the supervision of <a href="https://www.pedersenfisherieslab.com/">Dr. Eric Pedersen</a> and <a href="https://sites.google.com/view/paglia/home?authuser=0">Dr. Simone Brugiapaglia</a> in 2020 as part of research course. Their guidance and kindness in such wild times was invaluable, and without them, this project would not exist. If you're interested, the full report can be found <a href ="/assets/pdfs/AmandaGuBiol490Fall2020.pdf">here</a>. This summary is intended to be (hopefully) readable to people with no background in ecology, some familiarity with mathematics, and a general scientific literacy.</i>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<i>This is blog post is a summary of research that I did under the supervision of 
+  <a href="https://www.pedersenfisherieslab.com/">Dr. Eric Pedersen</a> and 
+  <a href="https://sites.google.com/view/paglia/home?authuser=0">Dr. Simone Brugiapaglia</a> 
+  in 2020 as part of research course. Their guidance and kindness in such wild times was 
+  invaluable, and without them, this project would not exist. If you're interested, the 
+  full report can be found <a href ="/assets/pdfs/AmandaGuBiol490Fall2020.pdf">here</a>. 
+  This summary is intended to be (hopefully) readable to people with no background in ecology, 
+  some familiarity with mathematics, and a general scientific literacy, ie. all my non-math 
+  friends who keep asking what I actually do.</i>
 <br>
 <h3>Compressive Sensing 101</h3>
-Compressive sensing (also known as compressed sensing) is a method used to solve sparse, underdetermined matrix systems which was developped around 2004. 
+Compressive sensing (also known as compressed sensing) is a method used to solve sparse, 
+underdetermined matrix systems which was developped around 2004. Let's unpack that sentence
+with an example.
