--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -24,3 +24,7 @@ excerpt_separator: "<!--more-->"
 Compressive sensing (also known as compressed sensing) is a method used to solve sparse, 
 underdetermined matrix systems which was developped around 2004. Let's unpack that sentence
 with an example.
+In this case, we have 3 unknowns and 2 equations, so the system is <i>underdetermined</i>: there
+are more unknowns than equations. This poses a problem for traditional solving techniques 
+because, as you might recall from middle school, you at least the same number of independent 
+equations as you have variables. 
