--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -9,6 +9,14 @@ categories:
 hidden: true
 excerpt_separator: "<!--more-->"
 ---
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [['$','$'], ['\\(','\\)']],
+      processEscapes: true
+    }
+  });
+  </script>
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <i>This blog post is a summary of research that I did under the supervision of 
   <a href="https://www.pedersenfisherieslab.com/">Dr. Eric Pedersen</a> and 
@@ -60,6 +68,7 @@ z
 8
 \end{matrix}
 $$
+In order to pick a sparse solution from this family of possible solutions,
 <br>
 <br>
 This technique has a lot of uses outside of ecology. As you can imagine, the idea of recovering 
