--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -9,15 +9,6 @@ categories:
 hidden: true
 excerpt_separator: "<!--more-->"
 ---
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [['$','$'], ['\\(','\\)']],
-      processEscapes: true
-    }
-  });
-  </script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <i>This blog post is a summary of research that I did under the supervision of 
   <a href="https://www.pedersenfisherieslab.com/">Dr. Eric Pedersen</a> and 
   <a href="https://sites.google.com/view/paglia/home?authuser=0">Dr. Simone Brugiapaglia</a> 
@@ -52,23 +43,23 @@ what proportion of the variables need to be zero for a system to be sparse. Even
 this condition of sparsity, we can solve this underdetermined matrix system<sup>(1)</sup>. 
 Just as a refresher, the above system can be written in the following way using matrices.
 $$
-\begin{matrix}
+\begin{pmatrix}
 2 & 1 & 0\\
 2 & 1 & 1
-\end{matrix}
+\end{pmatrix}
 \times 	
-\begin{matrix}
+\begin{pmatrix}
 x\\
 y\\
 z
-\end{matrix}
+\end{pmatrix}
 =
-\begin{matrix}
+\begin{pmatrix}
 5\\
 8
-\end{matrix}
+\end{pmatrix}
 $$
-In order to pick a sparse solution from this family of possible solutions,
+So how do we (or a computer) pick a sparse solution from this family of possible solutions?
 <br>
 <br>
 This technique has a lot of uses outside of ecology. As you can imagine, the idea of recovering 
