--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -31,7 +31,7 @@ $$
 $$
 In this system of equations, we have 3 unknowns and 2 equations, so the system is 
 <i>underdetermined</i>: there are more unknowns than equations. This poses a problem for 
-traditional solving techniques because, as you might recall, you at least the same number 
+traditional solving techniques because, as you might recall, you need at least the same number 
 of independent equations as you have variables. In this case, we can quickly check that this 
 is indeed true. We obtain a <i>family</i> of solutions, or a set of multiple solutions. We 
 know that $ z=3 $, but any combination of $ x, y $ works, so long as $ 2x +y = 5 $. Another way of 
@@ -79,7 +79,7 @@ Now, like two different boxes might have the same value by a given measure (like
 but be different sizes, different points also can have the same value under a given norm. 
 For example, $(0,1)$, $(1,0)$, $(0.75,-0.25)$, and $(-0.5, -0.5)$ all have the same $\ell_1$ norm.
 
-{% raw %}<img src="{{ site.url }}{{ site.baseurl }}/assets/images/LnormsUnitBalls.jpg" alt="">{% endraw %}
+{% raw %}<img src="/assets/images/LnormsUnitBalls.jpg" alt="">{% endraw %}
 Figure 1: The unit ball of the $\ell_1$ (in red) and $\ell_2$ norms (in blue). The unit "ball" 
 is all the points that have a value of 1 for a given norm. Yes, it is called a unit ball even 
 when it is very pointy.
