--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -160,4 +160,4 @@ it gets more exciting soon.
 <br>
 <br>
 (2) I've skipped over a lot of (all of) the nuance of norms and measures. They are different. 
-Forgive me analysis gods.</small>>
+Forgive me analysis gods.</small>
