--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -80,8 +80,9 @@ Now, like two different boxes might have the same value by a given measure (like
 but be different sizes, different points also can have the same value under a given norm. 
 For example, $(0,1)$, $(1,0)$, $(0.75,-0.25)$, and $(-0.5, -0.5)$ all have the same $\ell_1$ norm.
 <br>
+<br>
 {% raw %}<img src="/assets/images/LnormsUnitBalls.jpg" alt="">{% endraw %}
-<br><strong>Figure 1</strong>: The unit ball of the $\ell_1$ (in red) and $\ell_2$ norms (in blue). The unit "ball" 
+<br><strong>Figure 1:</strong> The unit ball of the $\ell_1$ (in red) and $\ell_2$ norms (in blue). The unit "ball" 
 is all the points that have a value of 1 for a given norm. Yes, it is called a unit ball even 
 when it is very pointy.
 <br>
@@ -102,8 +103,9 @@ the axes, which means that at least one of the variables is 0. We can compare th
 $\ell_2$ norm again. The smallest circle by contrast, does not intersect the sample space along 
 an axis, and therefore does not give a sparse solution.
 <br>
+<br>
 {% raw %}<img src="/assets/images/intersectionOfSampleSpace.jpg" alt="">{% endraw %}
-<br><strong>Figure 2</strong>:: The points with the minimum $\ell_1$ (in red) and $\ell_2$ norm values in 
+<br><strong>Figure 2:</strong> The points with the minimum $\ell_1$ (in red) and $\ell_2$ norm values in 
   our sample space (in green).
 <br>
 <br>
