--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -142,7 +142,7 @@ don't really effect each other unless they are directly in competition or have a
 predator-prey relationship. 
 <br>
 <br>
-The nature of the data is difficult, as often ecologists are lucky enough to have population data 
+The nature of the data is difficult to deal with, as often ecologists are not lucky enough to have population data 
 for all species, and not over long periods of time either. As such, techniques like compressive 
 sensing are incredibly promising because they require fewer input datapoints/equations to predict 
 the coefficients and therefore the ecosystem. My research mostly concerns how we can massage 
