--- a/_posts/2021-12-28-biol490.html
+++ b/_posts/2021-12-28-biol490.html
@@ -119,7 +119,7 @@ the more information with fewer equations or samples has obvious applications in
 theory: the science of how we store, compress, and restore information.
 
 <h3>The Ecology Connection</h3>
-One of the key questions in ecology is how populations of various species will change and effect 
+One of the key questions in ecology is how populations of various species will change and affect 
 each other over time. One of the oldest and most common ways of representing these relations 
 is the Lotka-Volterra equations, which are pairs of first-order nonlinear differentiable equations.
 $$
@@ -138,7 +138,7 @@ not compressive sensing is useful to figure out the values of $\alpha, \beta,\de
 a real ecosystem model, we'd have two unknown variables for every single pair of species, 
 one term for the effect each species has on every other species. This is lots of variables, 
 but it is a sound assumption that the matrix of all these coefficients is sparse, as most species 
-don't really effect each other unless they are directly in competition or have a 
+don't really affect each other unless they are directly in competition or have a 
 predator-prey relationship. 
 <br>
 <br>
@@ -150,7 +150,8 @@ ecological data into a form that we can use compressive sensing on and how effic
 recovering the underlying dynamics (the coefficients and equations) using only population data.
 <br>
 <br>
-I thought it was pretty neat. I hope you do too.
+I thought it was a pretty neat project. I hope you do too. Thanks for reading to all the way down 
+here.
 <hr>
 <small>
 (1) The exceptionally keen ones of you out there might say: but wait, we could just solve this equation by 
@@ -159,7 +160,6 @@ toy example. However, less trivial when you're working with hundreds of variable
 have no idea which ones or how many are zero. The example is merely to illustrate the technique and 
 unfortunately isn't a perfect showcase of the power of compressive sensing. Bear with me, 
 it gets more exciting soon.
-<br>
 <br>
 (2) I've skipped over a lot of (all of) the nuance of norms and measures. They are different. 
 Forgive me analysis gods.</small>
