--- a/_pages/about.html
+++ b/_pages/about.html
@@ -8,7 +8,7 @@ header:
 ---
 <strong>Heyo! Nice to meet ya.</strong> My name's Amanda Gu.
 <br>
-<br>I just graduated from McGill University with a B.A. in Maths and a minor in Computer Science. I'm now taking a year off from the academic and corporate worlds to see some neat places and do some cool things. Currently, I'm working in Whistler, in beautiful British Colombia, so if you're around, drop me a line! Things I enjoy include: <a href="https://open.spotify.com/playlist/3Kd9EnFNW93x9sznYpImKo?si=1206d4ad2c00477c">making playlists</a>, quantitative ecology (my main research interest), <a href = "https://www.goodreads.com/user/show/9595225-amanda">reading</a>, and being outside.
+<br>I graduated from McGill University in with a B.A. in Maths and a minor in Computer Science. I just got back from taking a year off from the academic and corporate worlds - saw some neat places and did some cool things. Currently, I'm working remotely from Whistler, in beautiful British Colombia, so if you're around, drop me a line! Things I enjoy include: <a href="https://open.spotify.com/playlist/0VppVwRA8kXs1JEkSoutAY">making playlists</a>, quantitative ecology (my main research interest), <a href = "https://www.goodreads.com/user/show/9595225-amanda">reading</a>, and being outside.
 <br>
 <br>I will try my best to keep this as up-to-date as possible with where I am and some travel pics, but no promises.
 <br>-Manderz
