--- a/_posts/2023-03-05-photoDump.html
+++ b/_posts/2023-03-05-photoDump.html
@@ -1,6 +1,9 @@
 ---
 title: "March 2022-Feb 2023 Photos"
 author_profile: true
+permalink: 2022photos/
+author_profile: true
+layout: single
 categories:
   - Travel
   - Photos
@@ -136,8 +139,8 @@ bc:
   - url: /assets/images/mtnporn.jpg
     image_path: /assets/images/mtnporn.jpg
     alt: "View from work"
-  - url: /assets/images/packs.jpeg
-    image_path: /assets/images/packs.jpeg
+  - url: /assets/images/packs.jpg
+    image_path: /assets/images/packs.jpg
     alt: "Backpacks and mountains"
   - url: /assets/images/scythe.jpg
     image_path: /assets/images/scythe.jpg
@@ -195,4 +198,140 @@ france:
   - url: /assets/images/sttropez.jpg
     image_path: /assets/images/sttropez.jpg
     alt: "Backyard views"
+```
+<h2>UK</h2>
+A week for London, Brighton, Hastings, and Eastbourne.
+```yaml
+uk:
+  - url: /assets/images/hastings.jpg
+    image_path: /assets/images/hastings.jpg
+    alt: "Hastings (yes, that Hastings)"
+  - url: /assets/images/sevenbends.jpg
+    image_path: /assets/images/sevenbends.jpg
+    alt: "A sick spot to kayak down"
+  - url: /assets/images/doubledecker.jpg
+    image_path: /assets/images/doubledecker.jpg
+    alt: "A London double decker bus"
+```
+<h2>Spain (Catalonia?)</h2>
+A month in Barcelona and surrounding area.
+
+```yaml
+barcelona:
+  - url: /assets/images/BarnaNights.jpg
+    image_path: /assets/images/BarnaNights.jpg
+    alt: "Cards and vermouth"
+  - url: /assets/images/batllo.jpg
+    image_path: /assets/images/batllo.jpg
+    alt: "Gaudi's Casa Batllo"
+  - url: /assets/images/beardTree.jpg
+    image_path: /assets/images/beardTree.jpg
+    alt: "Excellent trees with beards"
+  - url: /assets/images/CatalanScrap.jpg
+    image_path: /assets/images/CatalanScrap.jpg
+    alt: "Scrapbook day"
+  - url: /assets/images/differentMountains.jpg
+    image_path: /assets/images/differentMountains.jpg
+    alt: "Monserrat mountains"
+  - url: /assets/images/cooltree.jpg
+    image_path: /assets/images/cooltree.jpg
+    alt: "Cool and big tree"
+  - url: /assets/images/gaudigdn.jpg
+    image_path: /assets/images/gaudigdn.jpg
+    alt: "Park Guell"
+  - url: /assets/images/marina.jpg
+    image_path: /assets/images/marina.jpg
+    alt: "Barcelona marina"
+  - url: /assets/images/merce.jpg
+    image_path: /assets/images/merce.jpg
+    alt: "La Merce fireworks"
+  - url: /assets/images/sagrada.jpg
+    image_path: /assets/images/sagrada.jpg
+    alt: "Sagrada Familia"
+  - url: /assets/images/square.jpg
+    image_path: /assets/images/square.jpg
+    alt: "Baby square"
+```
+
+<h2>Greece</h2>
+Two weeks in Athens and Tzia (super super underrated island!).
+
+```yaml
+greece:
+  - url: /assets/images/ampitheatre.jpg
+    image_path: /assets/images/ampitheatre.jpg
+    alt: "Abandoned ampitheatre"
+  - url: /assets/images/Athenastree.jpg
+    image_path: /assets/images/Athenastree.jpg
+    alt: "THE olive tree that gave Athens its name"
+  - url: /assets/images/tzia.jpg
+    image_path: /assets/images/tzia.jpg
+    alt: "View from Tzia's port"
+  - url: /assets/images/GOAT.jpg
+    image_path: /assets/images/GOAT.jpg
+    alt: "Goats roaming around"
+  - url: /assets/images/parthenon.jpg
+    image_path: /assets/images/parthenon.jpg
+    alt: "Parthenon"
+  - url: /assets/images/prettyGreekLadies.jpg
+    image_path: /assets/images/prettyGreekLadies.jpg
+    alt: "Caryatid (pretty lady columns) porch of Erechtheion"
+  - url: /assets/images/tziaHouse.jpg
+    image_path: /assets/images/tziaHouse.jpg
+    alt: "Dreamy Greek beach house"
+  - url: /assets/images/tziaSunrise.jpg
+    image_path: /assets/images/tziaSunrise.jpg
+    alt: "Sunrise in Tzia"
+```
+
+<h2>Whistler</h2>
+Here we are: the remainder of the year. Mountain porn + slice of life.
+
+```yaml
+bc:
+   - url: /assets/images/bigWalk.jpeg
+    image_path: /assets/images/bigWalk.jpeg
+    alt: "Hike"
+  - url: /assets/images/chief.jpg
+    image_path: /assets/images/chief.jpg
+    alt: "The Chief"
+  - url: /assets/images/chief2.jpg
+    image_path: /assets/images/chief2.jpg
+    alt: "Another Chief hike"
+  - url: /assets/images/costco.jpg
+    image_path: /assets/images/costco.jpg
+    alt: "Legendary Costco run"
+  - url: /assets/images/dyingherebutyoucanttell.jpeg
+    image_path: /assets/images/dyingherebutyoucanttell.jpeg
+    alt: "I am dying here but you can't tell"
+  - url: /assets/images/Feb26AmandaFelipe.jpg
+    image_path: /assets/images/Feb26AmandaFelipe.jpg
+    alt: "Cuties on tour"
+  - url: /assets/images/glddrms.jpeg
+    image_path: /assets/images/glddrms.jpeg
+    alt: "Summer afternoon floating down the River of Golden Dreams"
+  - url: /assets/images/hike.jpg
+    image_path: /assets/images/hike.jpg
+    alt: "Yet another hike"
+  - url: /assets/images/jofree.jpg
+    image_path: /assets/images/jofree.jpg
+    alt: "Jofre Lake"
+  - url: /assets/images/mtnporn.jpg
+    image_path: /assets/images/mtnporn.jpg
+    alt: "View from work"
+  - url: /assets/images/packs.jpg
+    image_path: /assets/images/packs.jpg
+    alt: "Backpacks and mountains"
+  - url: /assets/images/scythe.jpg
+    image_path: /assets/images/scythe.jpg
+    alt: "Mountain people or boardgame people?"
+  - url: /assets/images/XmasFamphoto.jpeg
+    image_path: /assets/images/XmasFamphoto.jpeg
+    alt: "Christmas dinner"
+  - url: /assets/images/biggggWalk.jpeg
+    image_path: /assets/images/biggggWalk.jpeg
+    alt: "Yet another other hike"
+  - url: /assets/images/peak2peak.jpg
+    image_path: /assets/images/peak2peak.jpg
+    alt: "Peak2Peak"
 ```
